--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
             <form class="form-inline" ng-show="isInsertable(list.name)">
               <div class="form-group">
                 <label class="sr-only" for="newItem">New Item</label>
-                <input type="text" class="form-control" id="newItem" placeholder="Enter item">
+                <input type="text" class="form-control" id="newItem" placeholder="Enter item" ng-model="newItem">
               </div>
-              <button type="submit" class="btn btn-default">Add</button>
+              <button type="submit" class="btn btn-default" ng-click="addItem(list.name, newItem)">Add</button>
             </form>
           </div>
         </div>
