--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
             </ul>
             <form class="form-inline" ng-show="isInsertable(list.name)">
               <div class="form-group">
-                <label class="sr-only" for="newItem">New Item</label>
-                <input type="text" class="form-control" id="newItem" placeholder="Enter item" ng-model="newItem">
+                <label class="sr-only" for="newItem_{{list.name}}">New Item</label>
+                <input type="text" class="form-control" id="newItem_{{list.name}}" placeholder="Enter item" ng-model="new_items[list.name]">
               </div>
-              <button type="submit" class="btn btn-default" ng-click="addItem(list.name, newItem)">Add</button>
+              <button type="submit" class="btn btn-default" ng-click="addItem(list.name, new_items[list.name])">Add</button>
             </form>
           </div>
         </div>
