Add Manage section that provides 'new list' functionality for now

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,20 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12"> 
+          <h4><i>Manage</i><span class="right-align"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true" ng-hide="isManageVisible()" ng-click="toggleManageVisible()"></span><span class="glyphicon glyphicon-chevron-up" aria-hidden="true" ng-show="isManageVisible()" ng-click="toggleManageVisible()"></span></span></h4>
+          <div class="list-item-set" ng-show="isManageVisible()">
+            <form class="form-inline">
+              <div class="form-group">
+                <label class="sr-only" for="newList">New List</label>
+                <input type="text" class="form-control" id="newList" placeholder="Enter list name" ng-model="new_list">
+              </div>
+              <button type="submit" class="btn btn-default" ng-click="newList(new_list)">New List</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
